<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/inner_frame_layout_padding"
            app:layout_boxedEdges="all">

            <TextView
                android:id="@+id/when_sleep_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_get_up_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TimePicker
                android:id="@+id/time_picker_get_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/when_sleep_text" />

            <TextView
                android:id="@+id/fall_asleep_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_long_fall_asleep_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_picker_get_up" />

            <TimePicker
                android:id="@+id/time_picker_fall_aslep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fall_asleep_text" />

            <TextView
                android:id="@+id/fall_asleep_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_cycle_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_picker_fall_aslep" />

            <TimePicker
                android:id="@+id/time_picker_sleep_cycle_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fall_asleep_text2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>