<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.SwipeDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.wear.widget.BoxInsetLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ParameterActivity"
        tools:deviceIds="wear">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="@dimen/box_inset_layout_padding"
                app:layout_boxedEdges="all">

                <TextView
                    android:id="@+id/when_sleep_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/when_get_up_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TimePicker
                    android:id="@+id/time_picker_get_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/when_sleep_text" />

                <!--            <TextView-->
                <!--                android:id="@+id/fall_asleep_text"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:text="@string/how_long_fall_asleep_text"-->
                <!--                android:gravity="center"-->
                <!--                android:paddingTop="8dp"-->
                <!--                app:layout_constraintEnd_toEndOf="parent"-->
                <!--                app:layout_constraintStart_toStartOf="parent"-->
                <!--                app:layout_constraintTop_toBottomOf="@+id/time_picker_get_up" />-->

                <!--            <NumberPicker-->
                <!--                android:id="@+id/number_picker_fall_aslep"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                app:layout_constraintEnd_toEndOf="parent"-->
                <!--                app:layout_constraintStart_toStartOf="parent"-->
                <!--                app:layout_constraintTop_toBottomOf="@+id/fall_asleep_text" />-->

                <TextView
                    android:id="@+id/sleep_cycle_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/length_cycle_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_picker_get_up" />

                <NumberPicker
                    android:id="@+id/cycle_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sleep_cycle_length" />

                <!--            <TextView-->
                <!--                android:id="@+id/textView"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_marginStart="8dp"-->
                <!--                android:text="@string/minutes_text"-->
                <!--                app:layout_constraintBottom_toBottomOf="@+id/number_picker_fall_aslep"-->
                <!--                app:layout_constraintStart_toEndOf="@+id/number_picker_fall_aslep"-->
                <!--                app:layout_constraintTop_toBottomOf="@+id/fall_asleep_text" />-->

                <TextView
                    android:id="@+id/minutes_info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/minutes_text"
                    app:layout_constraintBottom_toBottomOf="@+id/cycle_duration"
                    app:layout_constraintStart_toEndOf="@+id/cycle_duration"
                    app:layout_constraintTop_toBottomOf="@+id/sleep_cycle_length" />

                <TextView
                    android:id="@+id/number_cycle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/how_many_sleep_cycles_do_you_want_to_sleep_ideally_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cycle_duration" />

                <NumberPicker
                    android:id="@+id/number_cycles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/confirm_button"
                    app:layout_constraintTop_toBottomOf="@+id/number_cycle_text" />

                <TextView
                    android:id="@+id/number_minutes_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/number_cycles"
                    app:layout_constraintStart_toEndOf="@+id/number_cycles"
                    app:layout_constraintTop_toTopOf="@+id/number_cycles"
                    tools:text="minutes info" />

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/confirm_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/number_cycles" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.wear.widget.BoxInsetLayout>
</androidx.wear.widget.SwipeDismissFrameLayout>